--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "acorn": "^8.14.0"
+    "@babel/parser": "^7.26.3",
+    "acorn": "^8.14.0",
+    "source-map": "^0.7.4"
   }
 }
